added railway file 2

--- a/railway.toml
+++ b/railway.toml
@@ -8,6 +8,4 @@ healthcheckMethod = "POST"
 healthcheckBody = "{}"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
-
-[build.watchPatterns]
-patterns = ["**/*"]
+watchPatterns = ["**/*"]
