--- a/dash/railway.toml
+++ b/dash/railway.toml
@@ -1,17 +1,10 @@
 [build]
-builder = "NIXPACKS"
+buildCommand = "npm run build"
+installCommand = "npm install"
 
 [deploy]
 startCommand = "npm run start"
 healthcheckPath = "/"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
-
-[build.watchPatterns]
-patterns = ["**/*"]
-
-[build.buildCommand]
-command = "npm run build"
-
-[build.installCommand]
-command = "npm install"
+watchPatterns = ["**/*"]
