--- a/dash/railway.toml
+++ b/dash/railway.toml
@@ -3,8 +3,8 @@ buildCommand = "npm run build"
 installCommand = "npm install"
 
 [deploy]
-startCommand = "npm run start"
+startCommand = "npm start"
 healthcheckPath = "/"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
-watchPatterns = ["**/*"]
+watchPatterns = ["/*/**", "/*.tsx", "/*.ts", "/*.js", "/*.json"]
