--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,6 @@
 [deploy]
 startCommand = "python simple_server.py"
-healthcheckPath = "/list_components"
-healthcheckMethod = "POST"
-healthcheckBody = "{}"
+healthcheckPath = "/health"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 watchPatterns = ["/*/**", "/*.py", "/*.txt", "/*.toml", "/*.json"]
